Fix spacing between to subtitles in HowMuchToSpend section

--- a/src/sections/howMuchToSpend/HowMuchToSpend.module.scss
+++ b/src/sections/howMuchToSpend/HowMuchToSpend.module.scss
@@ -56,6 +56,7 @@
         z-index: 9;
         margin-top: $offset;
         h3 {
+          margin-top: 64px;
           float: initial !important;
         }
       }
